Implement UI using basic html and css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
 
 <body>
   <h1>Awesome Books</h1>
+  <div class="book-list">
+    <article class="book-article">
+      <h2 class="b-title">Book 01</h2>
+      <h3 class="b-author"> Author 01</h3>
+      <button type="button" class="remove-button">Remove</button>
+    </article>
+    <article class="book-article">
+      <h2 class="b-title">Book 02</h2>
+      <h3 class="b-author"> Author 02</h3>
+      <button type="button" class="remove-button">Remove</button>
+    </article>
+  </div>
+  <form action="">
+    <input type="text" id="title" name="title" placeholder="title">
+    <input type="text" id="author" name="author" placeholder="author">
+    <button type="submit" id="add-button">Add</button>
+  </form>
+
 </body>
 
 </html>
