--- a/index.html
+++ b/index.html
@@ -5,24 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Awesome Books</title>
   <link rel="stylesheet" href="css/styles.css">
   <script src="scripts/main.js" defer></script>
+  <title>Awesome Books</title>
 </head>
 
 <body>
   <h1>Awesome Books</h1>
-  <div class="book-list">
-    <article class="book-article">
-      <h2 class="b-title">Book 01</h2>
-      <h3 class="b-author"> Author 01</h3>
-      <button type="button" class="remove-button">Remove</button>
-    </article>
-    <article class="book-article">
-      <h2 class="b-title">Book 02</h2>
-      <h3 class="b-author"> Author 02</h3>
-      <button type="button" class="remove-button">Remove</button>
-    </article>
+  <div class="books-list">
   </div>
   <form action="">
     <input type="text" id="title" name="title" placeholder="title">
