Create addBook function to add books dynamically

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <h1>Awesome Books</h1>
   <div class="books-list">
   </div>
-  <form action="">
-    <input type="text" id="title" name="title" placeholder="title">
-    <input type="text" id="author" name="author" placeholder="author">
+  <form action="" id="books-form">
+    <input type="text" id="book-title" name="title" placeholder="title">
+    <input type="text" id="book-author" name="author" placeholder="author">
     <button type="submit" id="add-button">Add</button>
   </form>
 
