--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
-  <h1>Awesome Books</h1>
+  <h1>All Awesome Books</h1>
   <div class="books-list">
   </div>
   <form action="#" id="books-form">
+    <h3>Add a new book</h3>
     <input type="text" id="book-title" name="title" placeholder="title">
     <input type="text" id="book-author" name="author" placeholder="author">
     <button type="submit" id="add-button">Add</button>
