--- a/index.html
+++ b/index.html
@@ -5,21 +5,48 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/layout.css">
   <script src="scripts/main.js" defer></script>
+  <script src="scripts/scroll.js" defer></script>
+  <!-- bootstrap links -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
   <title>Awesome Books</title>
 </head>
 
 <body>
-  <h1>All Awesome Books</h1>
-  <div class="books-list">
-  </div>
-  <form action="#" id="books-form">
-    <h3>Add a new book</h3>
-    <input type="text" id="book-title" name="title" placeholder="title">
-    <input type="text" id="book-author" name="author" placeholder="author">
-    <button type="submit" id="add-button">Add</button>
-  </form>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Awesome Books</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse offset-8" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a id="list-link" class="nav-link active" aria-current="page" href="#list">List</a>
+          <a id="addnew-link" class="nav-link" href="#add-new">Add New</a>
+          <a id="contact-link" class="nav-link" href="#contact">Contact</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <section class="booklist-container p-5 bg-dark vh-100">
+    <div class="row books-list">
+    </div>
+  </section>
+  <section class="addnew-container p-5 bg-light vh-100 d-none">
+    <form action="#" id="books-form">
+      <h3>Add a new book</h3>
+      <input class="form-control form-control-lg w-50 m-4" type="text" placeholder="Enter Book title..." aria-label=".form-control-lg example" id="book-title" name="title">
+      <input class="form-control form-control-lg w-50 m-4" type="text" placeholder="Enter Book author..." aria-label=".form-control-lg example" id="book-author" name="author">
+      <button type="button" class="btn btn-success btn-lg mt-2 mx-4" id="add-button">Add Book</button>
+    </form>
+  </section>
+  <section class="contact-container p-5 bg-primary vh-100 d-none">
+    <h3 class="text-light">Contact</h3>
+    <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem!</p>
+  </section>
 
 </body>
 
