--- a/index.html
+++ b/index.html
@@ -9,45 +9,61 @@
   <script src="scripts/main.js" defer></script>
   <script src="scripts/scroll.js" defer></script>
   <!-- bootstrap links -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
   <title>Awesome Books</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-navbar fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Awesome Books</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse offset-8" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a id="list-link" class="nav-link active" aria-current="page" href="#list">List</a>
-          <a id="addnew-link" class="nav-link" href="#add-new">Add New</a>
-          <a id="contact-link" class="nav-link" href="#contact">Contact</a>
+          <a id="list-link" class="nav-link active" aria-current="page" href="#">List</a>
+          <a id="addnew-link" class="nav-link" href="#">Add new</a>
+          <a id="contact-link" class="nav-link" href="#">Contact</a>
         </div>
       </div>
     </div>
   </nav>
-  <section class="booklist-container p-5 bg-dark vh-100">
+  <section class="booklist-container p-5 bg-light vh-100 mt-5">
+    <h3 class="text-center mb-5">All Awesome Books</h3>
     <div class="row books-list">
     </div>
   </section>
-  <section class="addnew-container p-5 bg-light vh-100 d-none">
-    <form action="#" id="books-form">
-      <h3>Add a new book</h3>
-      <input class="form-control form-control-lg w-50 m-4" type="text" placeholder="Enter Book title..." aria-label=".form-control-lg example" id="book-title" name="title">
-      <input class="form-control form-control-lg w-50 m-4" type="text" placeholder="Enter Book author..." aria-label=".form-control-lg example" id="book-author" name="author">
-      <button type="button" class="btn btn-success btn-lg mt-2 mx-4" id="add-button">Add Book</button>
+  <section class="addnew-container p-5 vh-100 mt-5 d-none">
+    <form action="#" id="books-form" class="m-auto container-sm">
+      <h3 class="text-center mb-5">Add a new book</h3>
+      <input class="form-control form-control-lg my-4" type="text" placeholder="Enter Book title..."
+        aria-label=".form-control-lg example" id="book-title" name="title">
+      <input class="form-control form-control-lg my-4" type="text" placeholder="Enter Book author..."
+        aria-label=".form-control-lg example" id="book-author" name="author">
+      <button type="button" class="btn btn-success btn-lg mb-4" id="add-button">Add Book</button>
     </form>
   </section>
-  <section class="contact-container p-5 bg-primary vh-100 d-none">
-    <h3 class="text-light">Contact</h3>
-    <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem!</p>
+  <section class="contact-container p-5 vh-100 mt-5 d-none">
+    <div class="m-auto container-sm">
+      <h3 class="text-center mb-5">Contact information</h3>
+      <p class="">Do you have any questions or you just want to say "Hello"? <br> You can reach out to us!</p>
+      <p class="mb-0">Our email: mail@mail.com</p>
+      <p class="mb-0">Our phone number: 0043586534422</p>
+      <p class="mb-0">Our address: Streetname 22, 84503 City, Country </p>
+    </div>
   </section>
-
+  <footer class="text-center text-dark fixed-bottom navbar-light bg-navbar">
+    <div class="text-start p-3">
+      © 2022 Copyright...
+    </div>
+  </footer>
 </body>
 
 </html>
